<resources>
    <string name="app_name">Favor</string>
    <!-- todo remove placeholder texts before release -->
    <string name="placeholder_long">Lorem ipsum dolor sit amet, mea ei alii reprehendunt, an his mucius facilis corpora. Vim volutpat principes forensibus ei, sed appetere periculis ut, et sit perfecto quaestio persequeris. Mei id malis volutpat. Pro ad nullam mediocrem facilisis, sed graece imperdiet prodesset ut. Ei libris graecis pri, pri modo percipit luptatum no. Modus detraxit patrioque ad sed, duis reprimique ne mel. Te decore delectus eos, nec probo efficiendi ad, in qui vidit senserit similique.</string>
    <string name="placeholder_short">Lorem ipsum dolor sit amet</string>
    <string name="sign_up">Sign Up</string>
    <string name="hello_what_is">Hello! What is your name?</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="next">Next</string>
    <string name="nice_to_meet">Nice to meet you! Information shared below is not shown to other users.</string>
    <string name="email">Email</string>
    <string name="birth_date">Birth Date</string>
    <string name="create_password">Create Password</string>
    <string name="invalid_email_address">Invalid email address.</string>
    <string name="passwords_must_be">Passwords must be at least 6 characters and contain at least one letter and one number. Passwords are case sensitive.</string>

    <string name="by_proceeding_you"><![CDATA[By proceeding, you accept the <i><a href="http://www.google.com">Terms of Service</a></i> and <i><a href= "http://facebook.com">Conditions</a></i> to use %1$s.]]></string>
    <string name="password">Password</string>
    <string name="congratulations_you_are">Congratulations! You are signed up. Please check your mailbox to confirm your account and start using %1$s.</string>
    <string name="go_to_mailbox">Go To Mailbox</string>
    <string name="close">Close</string>
    <string name="sign_in">Sign In</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="send_mail">Send Mail</string>
    <string name="cancel">Cancel</string>
    <string name="mail_sent_you">Mail sent! You can go to your mailbox and generate your new password.</string>
    <string name="please_create_your_new_password">Please create your new password.</string>
    <string name="create_new_password">Create New Password</string>
    <string name="new_password">New Password</string>
    <string name="please_create_your_password">Please create your password.</string>
    <string name="you_must_be_over">You must be over 18.</string>
    <string name="invalid_age">Invalid age.</string>
    <string name="hide">Hide</string>
    <string name="show">Show</string>
    <string name="please_write_your_email_below">Please write your email below</string>
    <string name="welcome">Welcome!</string>
<string name="personal_description_empty"><![CDATA[You have no personal description.<br><u>Add personal description.</u>]]></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="initial_viewpager_1_title">Welcome to %1$s</string>
    <string name="initial_viewpager_1_text">Do favors in exchange of points, ask for favors in exchange of points.</string>
    <string name="initial_viewpager_2_title">Socialize, Experience, Discover</string>
    <string name="initial_viewpager_2_text">Ask or do favors anytime, get to know new people around you.</string>
    <string name="initial_viewpager_3_title">Anything You Need</string>
    <string name="initial_viewpager_3_text">5 categories, unlimited favors, collaborate to the sharing economy.</string>

    <string name="home">Home</string>
    <string name="chat">Chat</string>
    <string name="create">Create</string>
    <string name="profile">Profile</string>
    <string name="more">More</string>
    <string name="create_event">Create %1$s</string>
    <string name="ride">Ride</string>
    <string name="delivery">Delivery</string>
    <string name="teach">Teach</string>
    <string name="borrow">Borrow</string>
    <string name="socialize">Socialize</string>
    <string name="description">Description</string>
    <string name="till_timeVar_dayVar">Till %1$s %2$s</string>
    <string name="timeVar_dayVar">%1$s %2$s</string>
    <string name="timeVar_dayVar_newLine">%1$s\n%2$s</string>
    <string name="time">Time</string>
    <string name="now">Now</string>
    <string name="later">Later</string>
    <string name="prize">Prize</string>
    <string name="x_point_left"><![CDATA[<b>%1$s</b> P Left]]></string>
    <string name="x_points">%1$s Points</string>
    <string name="location">Location</string>
    <string name="post_event">Post %1$s</string>
    <string name="title_activity_maps">Map</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="yesterday">Yesterday</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="save">Save</string>
    <string name="edit_name">Edit Name</string>
    <string name="edit_description">Edit Description</string>
    <string name="edit_email">Edit Email</string>
    <string name="invalid_character">Invalid Character.</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="done">Done</string>
    <string name="current_password">Current Password</string>
    <string name="edit_password">Edit Password</string>
    <string name="expiration_time">Expiration Time</string>
    <string name="please_select_a_category">Please select a category.</string>
    <string name="set_new_location">Set New Location</string>
    <string name="search_bar_hint">Looking for a %1$s to make?</string>
    <string name="ongoing_events">Ongoing %1$ss</string>
    <string name="number_reviews">%1$d Reviews</string>
    <string name="general_error">An error occurred. Please try again.</string>
    <string name="email_already_in_use">This email is already is use.</string>
    <string name="event_created">Your %1$s has been created.</string>
    <string name="getting_location">Trying to find your location.</string>
    <string name="permission_denied">Permission denied.</string>
    <string name="type_here">Type here.</string>
    <string name="distance_away">%1$s away</string>
    <string name="sent_request">Your request is sent.</string>
    <string name="user_wants_finalize_event">![CDATA[<b>%1$s</b> wants to finalize Favor.]]</string>
    <string name="accept">Accept</string>
    <string name="success">Success</string>
    <string name="delete">Delete</string>
    <string-array name="days_short">
        <item>Sun</item>
        <item>Mon</item>
        <item>Tue</item>
        <item>Wed</item>
        <item>Thu</item>
        <item>Fri</item>
        <item>Sat</item>
    </string-array>


    <!-- -->

</resources>
