<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/bottom_navigation_bar_home"
        android:enabled="true"
        android:icon="@mipmap/ic_launcher"
        android:title="@string/home"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/bottom_navigation_bar_chat"
        android:enabled="true"
        android:icon="@mipmap/ic_launcher"
        android:title="@string/chat"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/bottom_navigation_bar_create"
        android:enabled="true"
        android:icon="@mipmap/ic_launcher"
        android:title="@string/create"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/bottom_navigation_bar_profile"
        android:enabled="true"
        android:icon="@mipmap/ic_launcher"
        android:title="@string/profile"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/bottom_navigation_bar_more"
        android:enabled="true"
        android:icon="@mipmap/ic_launcher"
        android:title="@string/more"
        app:showAsAction="ifRoom"/>
</menu>