<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/colorPrimary"
              android:orientation="vertical">
    <!-- add action bar here-->
    <include
        android:id="@+id/sign_up_action_bar_include"
        layout="@layout/sign_up1_action_bar"/>

    <TextView
        android:id="@+id/activity_sign_up3_top_text"
        style="@style/DescriptionText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/passwords_must_be"
        />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/activity_sign_up3_password_text_input_layout"
        style="@style/SignUpTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="41dp"
        app:passwordToggleContentDescription="demo"
        app:passwordToggleEnabled="true">
        <EditText
            android:id="@+id/activity_sign_up3_password_editText"
            style="@style/LoginTexts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"/>
    </android.support.design.widget.TextInputLayout>


    <Button
        android:id="@+id/activity_sign_up3_sign_up_button"
        style="@style/LoginSignupButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp"
        android:background="@drawable/login_signup_button_background"
        android:text="@string/sign_up"/>


</LinearLayout>