<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              xmlns:tools="http://schemas.android.com/tools"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:background="@color/colorPrimary"
              android:focusable="true"
              android:focusableInTouchMode="true"
              android:orientation="vertical">
    <!-- add action bar here-->
    <include
        android:id="@+id/sign_up_action_bar_include"
        layout="@layout/sign_up1_action_bar"/>

    <TextView
        android:id="@+id/activity_forgot_password1_top_text"
        style="@style/DescriptionText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/please_write_your_email_below"
        />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/activity_forgot_password1_email_text_input_layout"
        style="@style/SignUpTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="41dp"
        app:errorEnabled="true">

        <EditText
            android:id="@+id/activity_forgot_password1_email_editText"
            style="@style/TextfieldText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"/>
    </android.support.design.widget.TextInputLayout>


    <Button
        android:id="@+id/activity_forgot_password1_send_mail_button"
        style="@style/LoginSignupButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="102dp"
        android:text="@string/send_mail"/>

</LinearLayout>