<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">
    <!-- add action bar here-->
    <include
        android:id="@+id/asd"
        layout="@layout/sign_up1_action_bar"/>

    <TextView
        android:id="@+id/activity_sign_up1_top_text"
        style="@style/LoginTexts.NoField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/sign_up1_top_text"
        android:textColor="#898989"
        />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/activity_sign_up1_name_text_input_layout"
        style="@style/LoginTexts.NoField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp">

        <EditText
            android:id="@+id/activity_sign_up1_name_editText"
            style="@style/LoginTexts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:inputType="textVisiblePassword"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/activity_sign_up1_surname_text_input_layout"
        style="@style/LoginTexts.NoField"
        android:layout_marginTop="25dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/activity_sign_up1_surname_editText"
            style="@style/LoginTexts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/surname"
            android:inputType="textVisiblePassword"/>
    </android.support.design.widget.TextInputLayout>


    <Button
        android:id="@+id/activity_sign_up1_next_button"
        style="@style/LoginSignupButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/next"/>

</LinearLayout>