<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical">
    <!-- add action bar here-->
    <include
        android:id="@+id/sign_up_action_bar_include"
        layout="@layout/sign_up1_action_bar"/>

    <TextView
        android:id="@+id/activity_login_top_text"
        style="@style/LoginTexts.NoField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/welcome_back"
        android:textColor="#898989"
        />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/activity_login_email_text_input_layout"
        style="@style/LoginTexts.NoField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="63dp">

        <EditText
            android:id="@+id/activity_login_email_editText"
            style="@style/LoginTexts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/activity_login_password_text_input_layout"
        style="@style/LoginTexts.NoField"
        android:layout_marginTop="48dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="#bbbbbb">

        <EditText
            android:id="@+id/activity_login_password_editText"
            style="@style/LoginTexts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"/>
    </android.support.design.widget.TextInputLayout>


    <Button
        android:id="@+id/activity_login_sign_in_button"
        style="@style/LoginSignupButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/sign_in"/>

</LinearLayout>