<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              xmlns:tools="http://schemas.android.com/tools"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:focusable="true"
              android:focusableInTouchMode="true"
              android:background="@color/colorPrimary">


    <include
        android:id="@+id/sign_up_action_bar_include"
        layout="@layout/sign_up1_action_bar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>


    <TextView
        android:id="@+id/activity_reset_password_top_text"
        style="@style/DescriptionText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="19dp"
        android:text="@string/please_create_your_new_password"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_action_bar_include"/>

    <!-- start -->

    <android.support.design.widget.TextInputLayout
        android:id="@+id/activity_reset_password_password_text_input_layout"
        style="@style/SignUpTextInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:errorTextAppearance="@style/SignUpTextInputLayoutErrorInfo"
        app:passwordToggleEnabled="false"
        app:errorEnabled="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginTop="91dp"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_action_bar_include">


        <EditText
            android:id="@+id/activity_reset_password_password_editText"
            style="@style/TextfieldText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLength="16"/>

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/activity_reset_password_password_toggle_textView"
        style="@style/PasswordHint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:text="@string/hide"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/activity_reset_password_password_text_input_layout"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="@+id/activity_reset_password_password_text_input_layout"
        app:layout_constraintHorizontal_bias="0.92"
        app:layout_constraintTop_toTopOf="@+id/activity_reset_password_password_text_input_layout"
        android:layout_marginTop="21dp"
        android:layout_marginBottom="8dp"/>

    <!-- end -->

    <Button
        android:id="@+id/activity_reset_password_generate_new_password_button"
        style="@style/LoginSignupButtons"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/create_new_password"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="250dp"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_action_bar_include"/>

</android.support.constraint.ConstraintLayout>