<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/colorPrimary"
              android:focusable="true"
              android:focusableInTouchMode="true">

    <include
        android:id="@+id/sign_up_action_bar_include"
        layout="@layout/sign_up1_action_bar"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/activity_sign_up2_top_text"
        style="@style/DescriptionText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="19dp"
        android:text="@string/nice_to_meet"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_action_bar_include"/>

    <Button
        android:id="@+id/activity_sign_up2_next_button"
        style="@style/LoginSignupButtons"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:text="@string/create_password"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/activity_sign_up2_birthdate_text_input_layout"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/activity_sign_up2_birthdate_text_input_layout"
        style="@style/SignUpTextInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        app:errorEnabled="false"
        app:errorTextAppearance="@style/SignUpTextInputLayoutError"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_sign_up2_email_text_input_layout">

        <EditText
            android:id="@+id/activity_sign_up2_birthdate_editText"
            style="@style/SignUpEditText"
            android:focusable="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/birth_date"
            android:inputType="date"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/activity_sign_up2_email_text_input_layout"
        style="@style/SignUpTextInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        app:errorEnabled="false"
        app:errorTextAppearance="@style/SignUpTextInputLayoutError"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_action_bar_include">

        <EditText
            android:id="@+id/activity_sign_up2_email_editText"
            style="@style/SignUpEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"/>
    </android.support.design.widget.TextInputLayout>

</android.support.constraint.ConstraintLayout>