<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="android.ebozkurt.com.favor.EditProfilePasswordActivity">

    <include layout="@layout/sign_up1_action_bar"
             android:id="@+id/include4"/>


    <TextView
        android:id="@+id/activity_edit_profile_password_current_password_toggle_editText"
        style="@style/EditProfilePasswordHint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="21dp"
        android:gravity="right"
        android:text="@string/hide"
        app:layout_constraintHorizontal_bias="0.92"
        app:layout_constraintLeft_toLeftOf="@+id/activity_edit_profile_password_current_password_text_input_layout"
        app:layout_constraintRight_toRightOf="@+id/activity_edit_profile_password_current_password_text_input_layout"
        app:layout_constraintTop_toTopOf="@+id/activity_edit_profile_password_current_password_text_input_layout"/>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/activity_edit_profile_password_new_password_text_input_layout"
        style="@style/EditProfileTextInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:errorEnabled="false"
        app:errorTextAppearance="@style/EditProfileTextInputLayoutErrorInfo"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:passwordToggleEnabled="false"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/activity_edit_profile_password_current_password_text_input_layout">


        <EditText
            android:id="@+id/activity_edit_profile_password_new_password_editText"
            style="@style/EditProfileEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/new_password"
            android:inputType="textPassword"
            android:maxLength="16"/>

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/activity_edit_profile_password_new_password_toggle_editText"
        style="@style/EditProfilePasswordHint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="21dp"
        android:gravity="right"
        android:text="@string/hide"
        app:layout_constraintHorizontal_bias="0.92"
        app:layout_constraintLeft_toLeftOf="@+id/activity_edit_profile_password_new_password_text_input_layout"
        app:layout_constraintRight_toRightOf="@+id/activity_edit_profile_password_new_password_text_input_layout"
        app:layout_constraintTop_toTopOf="@+id/activity_edit_profile_password_new_password_text_input_layout"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/activity_edit_profile_password_current_password_text_input_layout"
        style="@style/EditProfileTextInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:errorTextAppearance="@style/EditProfileTextInputLayoutErrorInfo"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:passwordToggleEnabled="false"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/include4">


        <EditText
            android:id="@+id/activity_edit_profile_password_current_password_editText"
            style="@style/EditProfileEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/current_password"
            android:inputType="textPassword"
            android:maxLength="16"/>

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/activity_edit_profile_password_save_button"
        style="@style/MainButtons"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="@string/save"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/activity_edit_profile_password_new_password_text_input_layout"/>


</android.support.constraint.ConstraintLayout>
